--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ nav img:hover{
     position: absolute;
     width: 100%;
     height: 1024px;
-    display: flex; /* 使用 Flexbox */
+    display: none; /* 使用 Flexbox */
     justify-content: center; 
     z-index: 3;
 }
@@ -118,7 +118,7 @@ nav img:hover{
     background: rgba(34, 40, 49, 0.85);
 }
 
-#h2-1{
+#Project-page1 h2{
     color: var(--light-blue, #96EFFF);
     text-align: center;
     font-family: "Noto Serif TC";
@@ -126,11 +126,26 @@ nav img:hover{
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    top: 28px;
-    left: 148px;
     gap: 0px;
     opacity: 0px;
     position: absolute;
+}
+
+#h2-1{
+    top: 28px;
+    left: 148px;
+}
+
+#h2-2{
+    top: 28px;
+    left: 618px;
+}
+
+#h2-3{
+    top: 28px;
+    left: 1128px;
+    gap: 0px;
+    opacity: 0px;
 }
 
 #line1{
@@ -138,8 +153,19 @@ nav img:hover{
     height: Fixed (102px)px;
     top: 88px;
     left: 189px;
+    position: absolute;
+}
+
+#line2{
+    top: 88px;
+    left: 669px;
     gap: 0px;
-    opacity: 0px;
+    position: absolute;
+}
+
+#line3{
+    top: 88px;
+    left: 1149px;
     position: absolute;
 }
 
@@ -185,6 +211,78 @@ nav img:hover{
     top: 562px;
     left: 108px;
     position: absolute;
+}
+
+#recycle{
+    top: 133px;
+    left: 620px;
+    position: absolute;
+}
+
+#river{
+    width: Fixed (210px)px;
+    height: Fixed (46px)px;
+    top: 276px;
+    left: 665px;
+    gap: 0px;
+    opacity: 0px;
+    position: absolute;    
+}
+
+#witch{
+    width: Fixed (64px)px;
+    height: Fixed (48px)px;
+    top: 419px;
+    left: 688px;
+    gap: 0px;
+    opacity: 0px;
+    position: absolute;
+}
+
+#heart{
+    top: 562px;
+    left: 648px;
+    position: absolute;
+}
+
+#rock{
+    top:133px;
+    left:1105px;
+    position: absolute;
+}
+
+#food{
+    top:242px;
+    left:1145px;
+    position: absolute;
+}
+
+#Play{
+    top:350px;
+    left:1125px;
+    position: absolute;
+}
+
+#mushroom{
+    top:460px;
+    left:1185px;
+    position: absolute;
+}
+
+#music{
+    top: 568px;
+    left:1155px;
+    position: absolute;
+}
+
+#close{
+    width: Fixed (28px)px;
+    height: Fixed (28px)px;
+    top: 16px;
+    left: 1397px;
+    gap: 0px;
+    opacity: 0px;
+    position: absolute;    
 }
 
 #social-media-bar {
