--- a/index.css
+++ b/index.css
@@ -22,14 +22,6 @@ header{
     z-index: 999;
 }
 
-nav {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    z-index: 999;
-}
-
 #nav{
     position: relative;
     width: 1440px;
@@ -49,6 +41,10 @@ nav img {
     position: relative;
     margin-right: 921px;
     background-color: transparent;
+}
+
+#hmaber-button{
+    display: none;
 }
 
 #project-chose-button{
@@ -76,7 +72,7 @@ nav p {
     line-height: normal;
 }
 
-nav img:hover{
+nav a img:hover{
     width: auto;
     height: auto;
     transition: transform 0.3s ease; /* 添加過渡效果 */
@@ -307,6 +303,10 @@ nav img:hover{
     margin: 0; /* 移除圖片的外邊距 */  
 }
 
+#hamber{
+    display: none;
+}
+
 #video-container{
     width: 100%; /* 自適應寬度 */
     height: 780px; /* 自適應高度 */
@@ -525,6 +525,10 @@ nav img:hover{
     left: 20px;
 }
 
+#map{
+    display: none;
+}
+
 #place-info1{
     z-index: 2;
 }
@@ -542,6 +546,18 @@ nav img:hover{
     top: 95px;
     left: 168px;
     z-index: 2;
+}
+
+#name{
+    display: none;
+}
+
+#date{
+    display: none;
+}
+
+#location{
+    display: none;
 }
 
 #name1{
@@ -744,7 +760,7 @@ nav img:hover{
 #goods{
     position: relative;
     top: 151px;
-    height: 400px;
+    height: 450px;
     width: 1440px;
     overflow: hidden;
     z-index: 2;
@@ -754,7 +770,7 @@ nav img:hover{
     display: flex;
     position: relative;
     background-color: transparent;
-    height: 400px;
+    height: 450px;
     margin-left: 108px;
 }
 
@@ -763,6 +779,16 @@ nav img:hover{
     display: block;
     text-align: center;
     width: 285px;
+}
+
+#goods li img{
+    width: 285px;
+    height: 285px;
+    top: 8px;
+    left: 26px;
+    gap: 0px;
+    opacity: 0px;
+    
 }
 
 #goods h6{
@@ -952,4 +978,771 @@ footer h6{
     height: Fixed (56px)px;
     top: 239px;
     justify-content: center;
+}
+
+#loadingOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: none; /* 預設隱藏 */
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  #loadingOverlay.show {
+    display: flex; /* 顯示 Overlay */
+  }
+
+  /* 讓影片充滿 Overlay 區域 */
+  #loadingOverlay video {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+#hamber-button{
+    display: none;
+}
+
+@media screen and (max-width: 768px){
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+    
+    * {
+        box-sizing: border-box;
+    }
+    
+
+    header{
+        position: absolute;
+        background-color: rgba(32,32,32,0);
+        width: 100%;
+        height: 95px;
+        z-index: 999;
+        justify-content: center; 
+        display: flex;
+    }
+    
+    nav {
+        position: relative;
+        display: flex;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        width: 100%;
+        z-index: 999;
+    }
+    
+    #nav{
+        position: relative;
+        width: 390px;
+        height: 95px;
+        flex-shrink: 0;
+    }
+    
+    nav li button{
+        display: none;
+    }
+    
+    nav a img {
+        width: 125px;
+        height: 89.9px;
+        top: 5px;
+        left: 5px;      
+        position: absolute;
+        background-color: transparent;
+    }
+
+    #hamber-button{
+        width: 60px;
+        height: 60px;
+        top: 0px;
+        left: 320px;
+        position: absolute;
+    }
+
+    #hamber{
+        display: none; /* 初始設置為隱藏 */
+        position: absolute;
+        width: 390px; /* 對齊內容到右側 */      
+    }
+
+    #hamber ul{
+        width: 175px;
+        height: 844px;
+        top: 0px;
+        right: 0px;
+        position: absolute;
+        background: rgba(56, 61, 69, 1);
+    }
+
+    #project-chose-button1 p{
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        width: Fixed (132px)px;
+        height: Fixed (40px)px;
+        top: 74px;
+        left: 51px;
+        position: absolute;
+    }
+
+    #hamber-social{
+        top:104px;
+        position: absolute;
+    }
+
+    #hamber ul img{
+        top: 104px;
+        display: block; /* 讓圖片作為塊級元素 */
+        background: #383D45; /* 背景顏色 */
+        padding-top: 40px; /* 頂部間距 */
+        padding-left: 57px;
+        margin: 0; /* 移除圖片的外邊距 */ 
+    }
+
+    #video-container{
+        width: 100%; /* 自適應寬度 */
+        height: 310px; /* 自適應高度 */
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        background-color: rgba(0, 0, 0, 1);
+        position: relative;
+    }
+
+    #video-content{
+        position: relative;
+        width: 390px;
+        height: 310px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+    }
+    
+    #background-image{
+        position:absolute;
+        top: 0px;
+        width: 390px;
+        height: 310px;
+    }
+    
+    #background-black{
+        position:absolute;
+        width: 390px; /* 自適應寬度 */
+        height: 310px; /* 自適應高度 */
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.40);
+        z-index: 1;
+    }
+    
+    #play-button{
+        display: none;
+    }
+    
+    #scroll-image{
+        display: none;
+    }
+    
+    #point-image{
+        position: absolute;
+        width: 20px;
+        height: 54.03px;
+        top: 242px;
+        left: 185px;
+        z-index: 2;
+    }
+    
+    #info-container{
+        width: 100%; /* 自適應寬度 */
+        display: grid;
+        justify-content: center; /* 水平居中 */
+        background-color: rgba(0, 0, 0, 1);
+        position: relative;
+    }
+    
+    #info-section-1{
+        position: relative;
+        width: 390px;
+        height: 930px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        background: linear-gradient(183.12deg, #000000 0.98%, #222831 50.74%, #222831 97.41%);
+    }
+    
+    #info-decorative-image{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        top: 8px;
+        left: 11px; 
+        z-index: 2;
+    }
+    
+    #info-details h2{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        width: Fixed (243px)px;
+        height: Fixed (52px)px;
+        top: 379px;
+        left: 74px;     
+        z-index: 2;
+    }
+    
+    #info-details p{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 48px; /* 300% */
+        width: Fixed (313px)px;
+        height: Fixed (288px)px;
+        top: 465px;
+        left: 39px;  
+        background-color: transparent;
+        z-index: 2;
+    }
+    
+    #logo-img{
+        position: absolute;
+        width: 337px;
+        height: 242px;
+        top: 88px;
+        left: 27px;      
+        z-index: 2;
+    }
+    
+    #info-details a img{
+        position: absolute;
+        width: 160px;
+        height: 45px;
+        top: 796px;
+        left: 115px;       
+        background-color: transparent;
+        z-index: 2;
+    }
+    
+    #info-decorative-image2{
+        display: none;
+    }
+    
+    #light{
+        display: none;
+    }
+    
+    #info-section-2{
+        position: relative;
+        width: 390px;
+        height: 844px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        background: linear-gradient(169.2deg, #222831 33.26%, #434F61 67.62%, #495668 90.87%);
+    }
+    
+    #exhibition-options{
+        z-index: 2;
+        writing-mode: horizontal-tb !important;
+    }
+    
+    #Tab-bar{
+        display: none;
+    }
+    
+    #Rectangle{
+        display: none;
+    }
+    
+    #exhibition-options p{
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 2.8px;
+        white-space: nowrap; /* 禁止換行（可選） */
+    }
+    
+    #exhibition-options button{
+        background-color: transparent;
+        height: 40px;
+        width: 390px;
+        z-index: 2;
+    }
+    
+    #place1{
+        position: absolute;
+        top: 8px;
+        left: 52px;
+    }
+    
+    #place2{
+        position: absolute;
+        top: 8px;
+        left: 218px;
+    }
+    
+    #map{
+        display: flex;
+        width: Fixed (300px)px;
+        height: Fixed (227px)px;
+        top: 176px;
+        left: 45px;
+        position: absolute;
+    }
+
+    #place-info1{
+        z-index: 2;
+    }
+    
+    #place-info1 h2{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        width: Fixed (128px)px;
+        height: Fixed (46px)px;
+        top: 95px;
+        left: 131px;
+        z-index: 2;
+    }
+
+    #name{
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        top: 422px;
+        left: 57px;
+        position: absolute;  
+        display: flex;      
+    }
+    
+    #date{
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        top: 468px;
+        left: 57px;
+        position: absolute;  
+        display: flex;  
+    }
+    
+    #location{
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        top: 514px;
+        left: 57px;
+        position: absolute;  
+        display: flex;  
+    }
+    
+    #name1{
+        position: absolute;
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        width: Fixed (208px)px;
+        height: Fixed (40px)px;
+        top: 422px;
+        left: 113px;    
+        z-index: 2;
+    }
+    
+    #date1{
+        position: absolute;
+        width: Fixed (184px)px;
+        height: Fixed (40px)px;
+        top: 468px;
+        left: 113px;     
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        letter-spacing: 1.28px;
+        z-index: 2;
+    }
+    
+    #location1{
+        position: absolute;
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        letter-spacing: 1.28px;
+        width: Fixed (220px)px;
+        height: Fixed (40px)px;
+        top: 514px;
+        left: 113px;
+        z-index: 2;
+    }
+    
+    #map-link1{
+        display: none;
+    }
+    
+    #map1{
+        position: absolute;
+        width: 300px;
+        height: Fixed (300px)px;
+        top: 585px;
+        left: 45px;
+        gap: 0px;
+        opacity: 0px;     
+        z-index: 3;
+        transform: scale(1); 
+    }
+    
+    #place-info2{
+        z-index: 2;
+        display: none;
+    }
+    
+    #place-info2 h2{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        width: Fixed (128px)px;
+        height: Fixed (46px)px;
+        top: 95px;
+        left: 131px;
+        z-index: 2;
+    }
+    
+    #name2{
+        position: absolute;
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        width: Fixed (208px)px;
+        height: Fixed (40px)px;
+        top: 422px;
+        left: 113px;    
+        z-index: 2;
+    }
+    
+    #date2{
+        position: absolute;
+        width: Fixed (184px)px;
+        height: Fixed (40px)px;
+        top: 468px;
+        left: 113px;     
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        letter-spacing: 1.28px;
+        z-index: 2;
+    }
+    
+    #location2{
+        position: absolute;
+        color: #FFF;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 40px; /* 250% */
+        letter-spacing: 1.28px;
+        width: Fixed (220px)px;
+        height: Fixed (40px)px;
+        top: 514px;
+        left: 113px;
+        z-index: 2;
+    }
+    
+    #map-link2{
+        display: none;
+    }
+    
+    #map2{
+        position: absolute;
+        width: 300px;
+        height: Fixed (300px)px;
+        top: 585px;
+        left: 45px;
+        gap: 0px;
+        opacity: 0px;    
+        transform: scale(1);  
+        z-index: 3;
+    }
+    
+    #light2{
+        display: none;
+    }
+    
+    #info-section-3{
+        position: relative;
+        width: 390px;
+        height: 844px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        background: linear-gradient(160.98deg, #222831 -32.75%, #384250 -24.92%, #495668 -7.61%, #475465 32.29%, #222831 67.66%);
+        overflow: hidden;
+    }
+    
+    #shop h2{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        width: Fixed (128px)px;
+        height: Fixed (46px)px;
+        top: 110px;
+        left: 131px;
+    }
+    
+    #shop-description1{
+        position: absolute;
+        width: Fixed (94.55px)px;
+        height: Fixed (55.43px)px;
+        top: 32.93px;
+        left: 17.45px;
+        gap: 0px;
+        opacity: 0px;    
+    }
+    
+    #goods{
+        position: relative;
+        top: 151px;
+        height: 400px;
+        width: 1440px;
+        overflow: hidden;
+        z-index: 2;
+    }
+    
+    #goods ul{
+        display: flex;
+        position: relative;
+        background-color: transparent;
+        height: 400px;
+        margin-left: 108px;
+    }
+    
+    #goods li{
+        margin: 8px 53px 0px;
+        display: block;
+        text-align: center;
+        width: 285px;
+    }
+    
+    #goods li img{
+        width: 285px;
+        height: 285px;
+        top: 8px;
+        left: 26px;
+        gap: 0px;
+        opacity: 0px;
+        
+    }
+    
+    #goods h6{
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    
+    #goods p{
+        margin-top: -2px;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    
+    #shop-description2{
+        position: absolute;
+        width: Fixed (52px)px;
+        height: Fixed (52px)px;
+        top: 346px;
+        left: 270px;
+    }
+    
+    #shop-description3{
+        position: absolute;
+        width: 43.247px;
+        height: 49px;
+        transform: rotate(16.039deg);
+        top: 0px;
+        left: 712px;
+    }
+    
+    #shop-description4{
+        display: none;
+    }
+    
+    #shop-description5{
+        display: none;
+    }
+    
+    #shop-description6{
+        display: none;
+    }
+    
+    #shop-description7{
+        display: none;
+    }
+    
+    #buy{
+        position: absolute;
+        width: 114px;
+        height: 39px;
+        top: 653px;
+        left: 138px;   
+        z-index: 2;
+    }
+    
+    #light3{
+        display: none;
+    }
+    
+    #light4{
+        display: none;
+    }
+    
+    footer{
+        width: 100%; /* 自適應寬度 */
+        display: flex;
+        justify-content: center; /* 水平居中 */
+        background-color: rgba(0, 0, 0, 1);
+        position: relative;
+    }
+    
+    #footer-container{
+        position: relative;
+        width: 390px;
+        height: 480px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+        background: #2B3646;
+    }
+    
+    #fb{
+        position: absolute;
+        width: 55px;
+        height:55px;
+        top: 60px;
+        left: 63px;
+    }
+    
+    #ig{
+        position: absolute;
+        width: 55px;
+        height: 55px;
+        top: 60px;
+        left: 168px;
+    }
+    
+    #yt{
+        position: absolute;
+        width: 55px;
+        height: 55px;
+        top: 60px;
+        left: 273px;         
+    }
+    
+    footer h2{
+        position: absolute;
+        width: 105px;
+        height: 56px;
+        top: 155px;
+        left: 143px;       
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 56px; /* 233.333% */
+    }
+    
+    footer p{
+        position: absolute;
+        color: #FFF;
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px; /* 175% */
+        line-height: 28px; /* 155.556% */
+        width: Fixed (287px)px;
+        height: Fixed (168px)px;
+        top: 240px;
+        left: 47px; 
+    }
+    
+    footer h6{
+        position: absolute;
+        color: rgba(255, 255, 255, 0.30);
+        text-align: center;
+        font-family: "Noto Serif TC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 56px; /* 350% */
+        width: Fixed (251px)px;
+        height: Fixed (56px)px;
+        top: 437px;
+        left: 70px;
+        gap: 0px;
+        opacity: 0px;        
+        justify-content: center;
+    }
 }
