--- a/index.css
+++ b/index.css
@@ -470,7 +470,7 @@ nav a img:hover{
     width: 100%;
     height: 600px;
     display: flex; /* 使用 Flexbox */
-    justify-content: centers; /* 水平居中 */
+
 }
 
 #info-content-2{
@@ -1041,27 +1041,22 @@ footer h6{
         width: 100%;
         height: 95px;
         z-index: 999;
-        justify-content: center; 
-        display: flex;
     }
-    
-    nav {
-        position: relative;
-        display: flex;
-        display: flex; /* 使用 Flexbox */
-        justify-content: center; /* 水平居中 */
-        width: 100%;
-        z-index: 999;
-    }
-    
+
     #nav{
         position: relative;
-        width: 390px;
+        display: flex;
+        justify-content: space-between; 
+        width: 100%;
+        z-index: 998;
         height: 95px;
-        flex-shrink: 0;
     }
     
-    nav li button{
+    #project-chose-button{
+        display: none;
+    }
+
+    #group{
         display: none;
     }
     
@@ -1078,21 +1073,23 @@ footer h6{
         width: 60px;
         height: 60px;
         top: 0px;
-        left: 320px;
+        left: 84%;
         position: absolute;
+        z-index: 999;
+        display: block;
     }
 
     #hamber{
         display: none; /* 初始設置為隱藏 */
         position: absolute;
-        width: 390px; /* 對齊內容到右側 */      
+        width: 100%; /* 對齊內容到右側 */      
     }
 
     #hamber ul{
         width: 175px;
-        height: 844px;
-        top: 0px;
-        right: 0px;
+        height: 600px;
+        top: -95px;
+        left: 70%;
         position: absolute;
         background: rgba(56, 61, 69, 1);
     }
@@ -1107,13 +1104,13 @@ footer h6{
         line-height: normal;
         width: Fixed (132px)px;
         height: Fixed (40px)px;
-        top: 74px;
-        left: 51px;
+        top: 150px;
+        left: 41px;
         position: absolute;
     }
 
     #hamber-social{
-        top:104px;
+        top:196px;
         position: absolute;
     }
 
@@ -1179,20 +1176,24 @@ footer h6{
     #info-container{
         width: 100%; /* 自適應寬度 */
         display: grid;
-        justify-content: center; /* 水平居中 */
-        background-color: rgba(0, 0, 0, 1);
+        justify-content: center;
+        background-color:linear-gradient(183.12deg, #000000 0.98%, #222831 50.74%, #222831 97.41%);
         position: relative;
     }
     
     #info-section-1{
         position: relative;
+        width: 100%;
+        height: 930px;
+        display: flex;
+        justify-content: center; /* 水平居中 */
+    }
+
+    #info-content-1{
         width: 390px;
         height: 930px;
-        display: flex; /* 使用 Flexbox */
-        justify-content: center; /* 水平居中 */
-        background: linear-gradient(183.12deg, #000000 0.98%, #222831 50.74%, #222831 97.41%);
     }
-    
+
     #info-decorative-image{
         position: absolute;
         width: 40px;
@@ -1264,12 +1265,19 @@ footer h6{
     
     #info-section-2{
         position: relative;
-        width: 390px;
+        width: 100%;
         height: 844px;
         display: flex; /* 使用 Flexbox */
-        justify-content: center; /* 水平居中 */
-        background: linear-gradient(169.2deg, #222831 33.26%, #434F61 67.62%, #495668 90.87%);
     }
+    
+    #info-content-2{
+        position: absolute;
+        width: 390px;
+        height: 840px;
+        display: flex; /* 使用 Flexbox */
+        justify-content: center; /* 水平居中 */
+    }
+    
     
     #exhibition-options{
         z-index: 2;
@@ -1539,7 +1547,6 @@ footer h6{
         height: 844px;
         display: flex; /* 使用 Flexbox */
         justify-content: center; /* 水平居中 */
-        background: linear-gradient(160.98deg, #222831 -32.75%, #384250 -24.92%, #495668 -7.61%, #475465 32.29%, #222831 67.66%);
         overflow: hidden;
     }
     
