--- a/project2.css
+++ b/project2.css
@@ -312,7 +312,7 @@ nav img:hover{
     position: relative;
     width: 100%;
     height: 830px;
-    background-color: black;
+    background-color: white;
     display: flex;
     justify-content: center;
 }
@@ -321,7 +321,6 @@ nav img:hover{
     width: 1440px;
     position: relative;
     height: 830px;
-    background-color: white;
     display: flex;
     justify-content: center;
 }
@@ -393,7 +392,7 @@ nav img:hover{
 
 #black{
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 830px;
     background: rgba(0, 0, 0, 0.85);
     z-index: 2;
@@ -466,7 +465,7 @@ nav img:hover{
     position: relative;
     width: 100%;
     height: 850px;
-    background-color: black;
+    background: linear-gradient(187deg, #000 5.81%, #222831 81.96%);
     display: flex; /* 使用 Flexbox */
     justify-content: center; /* 水平居中 */
 }
@@ -476,7 +475,6 @@ nav img:hover{
     width: 1440px;
     height: 850px;
     flex-shrink: 0;
-    background: linear-gradient(187deg, #000 5.81%, #222831 81.96%);
 }
 
 .logo-img{
@@ -594,7 +592,7 @@ nav img:hover{
     position: relative;
     width: 100%;
     height: 750px;
-    background-color: black;
+    background: linear-gradient(191.98deg, #222831 41.18%, #495668 81.99%);
     display: flex; /* 使用 Flexbox */
     justify-content: center; /* 水平居中 */
 }
@@ -604,7 +602,6 @@ nav img:hover{
     width: 1440px;
     height: 750px;
     flex-shrink: 0;
-    background: linear-gradient(191.98deg, #222831 41.18%, #495668 81.99%);
 }
 
 .project-2-1{
@@ -745,7 +742,7 @@ nav img:hover{
     position: relative;
     width: 100%;
     height: 750px;
-    background-color: black;
+    background: linear-gradient(166deg, #222831 -45.33%, #384250 -30.2%, #495668 -13.64%, #475465 31.44%, #222831 76.14%);;
     display: flex; /* 使用 Flexbox */
     justify-content: center; /* 水平居中 */
 }
@@ -755,7 +752,6 @@ nav img:hover{
     width: 1440px;
     height: 750px;
     flex-shrink: 0;
-    background: linear-gradient(166deg, #222831 -45.33%, #384250 -30.2%, #495668 -13.64%, #475465 31.44%, #222831 76.14%);;
 }
 
 .description-4{
