--- a/project.css
+++ b/project.css
@@ -391,16 +391,10 @@ nav a img:hover{
 #chose{
     position: relative;
     width: 100%;
-    height: 110vh;
+    height: 830px;
     background-color: white;
     display: flex;
     justify-content: center;
-}
-
-#chose-container{
-    width: 100%;
-    height: 110vh;
-    align-items: center;
 }
 
 #button-left{
@@ -422,6 +416,7 @@ nav a img:hover{
 #project1{
     position: absolute;
     width: 22vw;
+    height: 33vw;
     top: 22vh;
     left: 38.5vw;    
     z-index: 3;
@@ -431,8 +426,9 @@ nav a img:hover{
 #project2{
     position: absolute;
     width: 17vw;
-    top: 38.5vh;
-    left: 69vw;
+    height: 25.5vw;
+    top: 30vh;
+    left: 69.5vw;
     z-index: 1;
     transition: width 0.5s ease, height 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0s;
 }
@@ -447,6 +443,7 @@ nav a img:hover{
 #project4{
     position: absolute;
     width: 17vw;
+    height: 25.5vw;
     top: 30vh;
     left: 13.5vw;
     z-index: 1; 
@@ -463,56 +460,55 @@ nav a img:hover{
 
 #bar-left{
     top:724px;
-    left: 449px;
-    width: Fixed (187px)px;
-    height: Fixed (50px)px;
+    left: 31vw;
+    width: 13vw;
     position: absolute;
     z-index: 2;
 }
 
 #bar-mid{
     top:724px;
-    left: 625px;
-    width: 190px;
-    height: 50px;
+    left: 43.4vw;
+    width: 13.1vw;
     position: absolute;
     z-index: 2;
 }
 
 #bar-right{
     top:724px;
-    left: 804px;
-    width: 187px;
-    height: 50px;
+    left: 55.8vw;
+    width: 13vw;
     position: absolute;
     z-index: 2;
 }
 
-#table{
-    width: auto;
-    height: auto;
-    top: 735px;
-    left: 514px;
-    position: absolute;
-    z-index: 3;
+#chose p{
+    color: #384250;
+    text-align: center;
+    font-family: "BoutiqueBitmap9x9 1.5";
+    font-size: 1.3vw;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    z-index: 4;
 }
 
-#PC{
-    width: auto;
-    height: auto;
-    top: 739px;
-    left: 702px;
+#p1 p{
     position: absolute;
-    z-index: 3;
+    top: 733px;
+    left: 33.6vw ;
 }
 
-#index{
-    width: auto;
-    height: auto;
-    top: 737px;
-    left: 868px;
+#p2 p{
     position: absolute;
-    z-index: 3;
+    top: 733px;
+    left: 45.7vw ;
+}
+
+#p3 p{
+    position: absolute;
+    top: 733px;
+    left: 58.2vw ;
 }
 
 #description1{
@@ -533,29 +529,20 @@ nav a img:hover{
     justify-content: center; /* 水平居中 */
 }
 
-.project-1{
-    position: relative;
-    width: 1440px;
-    height: 850px;
-    flex-shrink: 0;
-    background: rgba(0, 0, 0, 0);
-}
-
 .logo-img{
     position: absolute;
-    width: Fixed (360px)px;
-    height: Fixed (540px)px;
+    width: 25vw;
+    left: 15vw;
+    top: 155px;
 }
 
 .project-1 h2{
     width: Fixed (512px)px;
     height: Fixed (92px)px;
-    top: 204px;
-    left: 713px;
-    gap: 0px;
-    opacity: 0px;
+    top: 135px;
+    left: 50vw;
     font-family: Noto Serif TC;
-    font-size: 64px;
+    font-size: clamp(32px, 4vw, 64px);
     font-weight: 700;
     line-height: 91.97px;
     text-align: left;
@@ -568,29 +555,25 @@ nav a img:hover{
 .project-1 h4{
     color: #FFF;
     font-family: "Noto Serif TC";
-    font-size: 40px;
+    font-size: clamp(20px, 3vw, 40px);
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     width: Fixed (312px)px;
     height: Fixed (57px)px;
-    top: 341px;
-    left: 719px;
-    gap: 0px;
-    opacity: 0px;
+    top: 241px;
+    left: 50vw;
     position: absolute;    
 }
 
 .project-1 p{
     width: Fixed (352px)px;
     height: Fixed (57px)px;
-    top: 451px;
-    left: 719px;
-    gap: 0px;
-    opacity: 0px;
+    top: 351px;
+    left: 50vw;
     color: #FFF;
     font-family: "Noto Serif TC";
-    font-size: 40px;
+    font-size: clamp(20px, 3vw, 40px);
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -608,9 +591,7 @@ nav a img:hover{
     width: Fixed (55px)px;
     height: Fixed (55px)px;
     top: 584px;
-    left: 720px;
-    gap: 0px;
-    opacity: 0px;
+    left: 50vw;
     position: absolute;    
     background-color: rgba(0, 0, 0, 0);
     z-index: 3;
@@ -620,9 +601,7 @@ nav a img:hover{
     width: Fixed (55px)px;
     height: Fixed (55px)px;
     top: 584px;
-    left: 815px;
-    gap: 0px;
-    opacity: 0px;
+    left: calc(50vw + 95px);
     position: absolute;
     background-color: rgba(0, 0, 0, 0);    
     z-index: 3;
@@ -634,9 +613,7 @@ nav a img:hover{
     transform: rotate(15.974deg);
     flex-shrink: 0;
     top: 611px;
-    left: 1224.79px;
-    gap: 0px;
-    opacity: 0px;
+    left: 85vw;
     transform: rotate(15.974deg);
     position: absolute;
 }
@@ -645,9 +622,7 @@ nav a img:hover{
     width: Fixed (123.47px)px;
     height: Fixed (120px)px;
     top: 780px;
-    left: 254.33px;
-    gap: 0px;
-    opacity: 0px;
+    left: 17.6vw;
     position: absolute;       
     z-index: 3;
 }
@@ -927,7 +902,7 @@ nav a img:hover{
 }
 
 #project-container1{
-    display: grid;
+    display: block;
 }
 
 #project-container2{
@@ -940,34 +915,6 @@ nav a img:hover{
 
 #project-container4{
     display: none;
-}
-
-#post-1{
-    top: 155px;
-    left: 215px;
-    transform: scale(0.13); 
-    transform-origin: top left; 
-}
-
-#post-2{
-    top: 155px;
-    left: 215px;
-    transform: scale(0.46); 
-    transform-origin: top left; 
-}
-
-#post-3{
-    top: 155px;
-    left: 215px;
-    transform: scale(0.26); 
-    transform-origin: top left; 
-}
-
-#post-4{
-    top: 155px;
-    left: 215px;
-    transform: scale(0.22); 
-    transform-origin: top left; 
 }
 
 footer{
