--- a/project.css
+++ b/project.css
@@ -633,94 +633,53 @@ nav a img:hover{
     height: 750px;
     background: linear-gradient(191.98deg, #222831 41.18%, #495668 81.99%);
     display: flex; /* 使用 Flexbox */
-    justify-content: center; /* 水平居中 */
-}
-
-.project-2{
-    position: relative;
-    width: 1440px;
-    height: 750px;
-    flex-shrink: 0;
-}
-
-.project-2-1{
-    position: relative;
-    width: 1440px;
-    height: 750px;
-    flex-shrink: 0;
-    background: linear-gradient(191.98deg, #222831 41.18%, #495668 81.99%);
 }
 
 .button-left-1{
-    width: Fixed (47px)px;
-    height: Fixed (90px)px;
+    width: 3.2vw;
     top: 330px;
-    left: 50px;
-    gap: 0px;
+    left: 3.5vw;
     border: 5px 0px 0px 0px;
-    opacity: 0px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0);
     z-index: 3;
 }
 
 .button-right-1{
-    width: Fixed (47px)px;
-    height: Fixed (90px)px;
+    width: 3.2vw;
     top: 330px;
-    left: 1343px;
-    gap: 0px;
+    left: 93.2vw;
     border: 5px 0px 0px 0px;
-    opacity: 0px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0);
     z-index: 3;
 }
 
 .info-img{
-    width: 372px;
-    height: 375px;
+    width: 20.8vw;
     top: 187px;
-    left: 179px;
-    gap: 0px;
-    opacity: 0px;
+    left: 12.4vw;
     position: absolute;    
     z-index: 3;
 }
 
-.info-p{
-    display: flex;
-    position: relative;
-}
-
-.info-p-1{
-    display: flex;
-    position: relative;
-    display: none;
-}
-
 .info-img-1{
-    width: 712px;
-    height: 506px;
-    top: 104px;
-    left: 384px;
-    gap: 0px;
-    opacity: 0px;    
     position: absolute;
+    width: 49.44vw;
+    height: 506px;   /* 保留原值 */
+    top: 104px;      /* 保留原值 */
+    left: 26.67vw;
 }
 
 .info-p h2{
-    width: Fixed (320px)px;
-    height: Fixed (92px)px;
     top: 240px;
-    left: 600px;
+    left: 41.67vw;
     position: absolute;
-    font-family: Noto Serif TC;
-    font-size: 56px;
+    font-family: 'Noto Serif TC', serif;
+    font-size: clamp(28px, 3.9vw, 56px);
     font-weight: 700;
     line-height: 80.47px;
     text-align: left;
-    text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: white;
 }
@@ -730,12 +689,11 @@ nav a img:hover{
 }
 
 .info-p p{
-    width: Fixed (663px)px;
-    height: Fixed (115px)px;
-    left: 600px;
     position: absolute;
-    color: #FFF;
-    font-family: "Noto Serif TC";
+    left: 41.67vw;
+    top: 24.17vw;
+    color: white;
+    font-family: "Noto Serif TC", serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -762,9 +720,7 @@ nav a img:hover{
     width: Fixed (125.51px)px;
     height: Fixed (125.51px)px;
     top: 553px;
-    left: 1242px;
-    gap: 0px;
-    opacity: 0px;
+    left: 86.25vw;
     position: absolute;
     z-index: 3;
 }
@@ -778,114 +734,130 @@ nav a img:hover{
     justify-content: center; /* 水平居中 */
 }
 
-.project-3{
-    position: relative;
-    width: 1440px;
-    height: 750px;
-    flex-shrink: 0;
-}
-
 .description-4{
     width: Fixed (105.53px)px;
     height: Fixed (110px)px;
     top: 11px;
-    left: 42.59px;
+    left: 2.96vw;
     position: absolute;
 }
 
-.menber{
-    width: 510px;
-    height: 230px;
-    z-index: 3;
-}
-
-#menber-1{
-    top: 100px;
-    left: 170px;
+#menber-1 {
+    top: 100px;  /* 保持不變 */
+    left: 11.81vw; /* 170px / 1440px * 100 */
     position: absolute;
+    z-index: 99;
 }
 
-.menber-img{
+.menber-img {
     top: 0px;
     left: 0px;
-    width: 193.154px;
-    height: 230px;
+    width: 13.41vw; /* 193.154px / 1440px * 100 */
+    height: 230px; /* 保持不變 */
     flex-shrink: 0;
     position: absolute;
 }
 
-.menber h2{
+.menber h2 {
     color: #FFF;
     font-family: "Noto Serif TC";
-    font-size: 48px;
+    font-size: 3.33vw; /* 大約是 48px，視情況調整 */
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    width: Fixed (96px)px;
-    height: Fixed (69px)px;
-    top: 0px;
-    left: 276px;
+    width: 10.67vw; /* 96px / 1440px * 100 */
+    height: 9.67vh; /* 69px / 750px * 100 */
+    top: 0px;  /* 保持不變 */
+    left: 19.17vw; /* 276px / 1440px * 100 */
     gap: 0px;
-    opacity: 0px;    
+    opacity: 0px;
     position: absolute;
 }
 
-.menber p{
+.menber p {
     color: #FFF;
     font-family: "Noto Serif TC";
-    font-size: 36px;
+    font-size: 2.5vw; /* 大約是 36px，視情況調整 */
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    width: Fixed (154.52px)px;
-    height: Fixed (48.82px)px;
-    top: 105px;
-    left: 276px;
+    width: 10.73vw; /* 154.52px / 1440px * 100 */
+    height: 6.51vh; /* 48.82px / 750px * 100 */
+    top: 105px;  /* 保持不變 */
+    left: 19.17vw; /* 276px / 1440px * 100 */
     position: absolute;
 }
 
-.work-1{
-    top:178px;
-    left:276px;
-    position: absolute ;
-}
-
-.work-2{
-    top:178px;
-    left:351px;
-    position: absolute ;
-}
-
-.work-3{
-    top:178px;
-    left:426px;
-    position: absolute ;
-}
-
-.work-4{
-    top:178px;
-    left:501px;
-    position: absolute ;
-}
-
-#menber-2{
-    top:100px;
-    left: 770px;
+.work-1 {
+    top: 178px; /* 保持不變 */
+    left: 19.17vw; /* 276px / 1440px * 100 */
     position: absolute;
 }
 
-#menber-3{
-    top:420px;
-    left: 770px;
+.work-2 {
+    top: 178px; /* 保持不變 */
+    left: 24.38vw; /* 351px / 1440px * 100 */
     position: absolute;
 }
 
-#menber-4{
-    top:420px;
-    left: 170px;
+.work-3 {
+    top: 178px; /* 保持不變 */
+    left: 29.58vw; /* 426px / 1440px * 100 */
     position: absolute;
 }
 
+
+.work-4 {
+    top: 178px; /* 保持不變 */
+    left: 34.72vw; /* 501px / 1440px * 100 */
+    position: absolute;
+}
+
+.work-text{
+    position: absolute;
+    top:258px;
+    left: 19.17vw;
+    width: 20.83vw;
+    height: 36px;
+    flex-shrink: 0;
+    z-index: 99;
+    border-radius: 5px;
+    background: rgba(255, 252, 205, 0.80);
+    display: none;
+    justify-content: center;  /* 水平置中 */
+    align-items: center;  
+}
+
+.work-text h4{
+    color: #000;
+    font-family: "Noto Serif TC";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 1.4px;
+}
+
+#menber-2 {
+    top: 100px;  /* 保持不變 */
+    left: 53.47vw; /* 770px / 1440px * 100 */
+    position: absolute;
+    z-index: 99;
+}
+
+#menber-3 {
+    top: 420px; /* 保持不變 */
+    left: 53.47vw; /* 770px / 1440px * 100 */
+    position: absolute;
+    z-index: 99;
+}
+
+#menber-4 {
+    top: 420px; /* 保持不變 */
+    left: 11.81vw; /* 170px / 1440px * 100 */
+    position: absolute;
+    z-index: 99;
+}
 .light-4{
     left: 20px;
     bottom: 0px;
